maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:15: error: expected class or object definition
def keepHandOnSideWall(){
^IslandMaze:30: error: Unmatched closing brace '}' ignored here
}
^